--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-speech-recognition": "^3.10.0",
     "sass": "^1.58.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
